Update to responsive.css to reduce top margin and remove side margins on images to fix overflow on readable images. Addition of #topics id to remove box shadow on mobile version of topics pages.

--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -136,6 +136,9 @@
   #readable-content code, #readable-content samp, #readable-content kbd {
     font-size: 20px;
   }
+  #readable-content img, #readable-content object, #readable-content embed {
+    margin: 15px 0px;
+  }
   #content-header h1 {
     line-height: 45px;
   }
@@ -151,6 +154,11 @@
     -webkit-box-shadow: 0px -5px 5px 2px rgba(53,56,63,0.05);
     -moz-box-shadow: 0px -5px 5px 2px rgba(53,56,63,0.05);
     box-shadow: 0px -5px 5px 2px rgba(53,56,63,0.05);
+  }
+  #topics #home-content {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
   }
   .post-date time {
     font-size: 16px;
